# responsive-image-to-hugo-shortcode

./: .gitignore  Cargo.toml  README.md  TODO.md  ToDo.txt  build.rs  output
src/: command_line.rs  constants.rs  data.rs  error.rs  fallback_image.rs  hugo.rs  image.rs  lib.rs  main.rs  metrics.rs  options.rs  source.rs  sqip.rs  structs.rs
src/data/: exif.rs  hugo.rs  mod.rs
src/image/: generated_image.rs  image.rs  image_info.rs  mod.rs  original_image.rs
src/upload/: constants.rs  mod.rs  uploadable.rs
test/: example_input.txt  images.json
