[package]
name = "responsive-image-for-hugo"
version = "0.2.0"
description = "A library and command line tool for managing images with my Hugo site"
license = "MIT"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2021"
categories = ["command-line-utilities"]
readme = "README.md"

[patch.crates-io]
zune-image = { path = "/Users/arran/.cargo/registry/src/index.crates.io-6f17d22bba15001f/zune-image-0.4.15" }


[dependencies]
rimage = { git = "https://github.com/arranf/rimage.git", branch = "feature/jpegli", features = [
    "resize",
    "jpegli",
    "oxipng",
    "threads",
    "metadata",
] }
load_image = { git = "https://gitlab.com/arranf/load_image.git", branch = "feature/jpegli" }
env_logger = "0.11.3"
log = "0.4.21"
structopt = "0.3.26"
chrono = "0.4.38"
regex = "1.10.4"
tempfile = "3.10.1"
serde_json = "1.0.116"
serde = "1.0.198"
serde_derive = "1.0.198"
rust-s3 = { version = "0.33.0", features = ["default", "blocking", "tokio"] }
indicatif = "0.17.8"
base64 = "0.22.0"
num_cpus = "1.16.0"
lazy_static = "1.4.0"
anyhow = "1.0.81"
thiserror = "1.0.58"
itertools = "0.12.1"
zune-core = "0.4.12"
zune-image = "0.4.15"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"
